Refactoring e fix alle logiche di aggiunta e rimozione
